--- a/src/Css/NavBar.css
+++ b/src/Css/NavBar.css
@@ -136,6 +136,6 @@ form{
   left: 0;
   right: 0;
   z-index: 1;
-  background-color: rgb(121, 121, 121);
-  color: black;
+  background-color: rgba(66, 68, 78, 0.938);
+  color: rgb(255, 255, 255);
 }
